--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "backend",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "node-fetch": "2"
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
+    "express": "~4.16.1",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^6.9.1",
+    "morgan": "~1.9.1"
   }
 }
