--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,6 +16,8 @@
     "mongoos": "^0.0.1-security",
     "mongoose": "^6.9.1",
     "morgan": "~1.9.1",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "uid2": "^1.0.0"
   }
 }
